# fswe-final-project-example

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
data/: rating_sample.parquet
fswe_demo/: __init__.py  main.py  settings.py
fswe_demo/application/api/: middleware.py
fswe_demo/application/api/routers/: item_popularity.py  recommendations.py
fswe_demo/application/dto/: mappers.py  recs.py
fswe_demo/application/use_cases/: ingest_raw_data.py
fswe_demo/domain/data_ingestion/: entities.py  exceptions.py  ports.py
fswe_demo/domain/recommendation/: exceptions.py  popular_item.py  recs.py  reposistory.py
fswe_demo/infra/: logger.py  reposistory.py
fswe_demo/infra/adapters/: excel_reader.py  parquet_reader.py  postgres_writer.py  utils.py
fswe_demo/infra/data_source/: parquet_reader.py
fswe_demo/infra/db/: get_conn.py
fswe_demo/infra/dbt/ecommerce/: .user.yml  dbt_project.yml  profiles.yml
fswe_demo/infra/dbt/ecommerce/macros/: calculate_days_between.sql  categorize_rating.sql
fswe_demo/infra/dbt/ecommerce/models/mart/: popular_items.sql
fswe_demo/infra/dbt/ecommerce/models/staging/ecommerce/: _ecommerce__docs.md  _ecommerce__models.yml  _ecommerce__sources.yml  stg_ecommerce__ratings.sql
fswe_demo/infra/orm/: models.py
notebooks/: 001_eda.ipynb  002_fp_growth.ipynb  002_fp_growth_algo copy 2.ipynb  002_fp_growth_algo copy.ipynb  002_fp_growth_algo.ipynb  002_play_around_w_fpgrowth.ipynb  003_orm.ipynb  004_pydantic.ipynb
notebooks/outputs/: 002_fp_growth_output.ipynb
pipelines/: ingest_raw.py
tools/: convert_parquet_to_excel.py  run.py
