[project]
name = "fswe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "poethepoet>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fswe_demo"]

[tool.ruff]
target-version = "py312"


[tool.poe.executor]
type = "uv"                     # so you don't need "uv run ..." in commands
# load your .env so DB vars are consistent (no Makefile parsing quirks)
[tool.poe]
envfile = ".env"                # can also be ["./.env", "./.env.local"]
[tool.poe.tasks]
# simplest: run your entrypoint exactly like you do by hand
ingest-raw-data = "python tools/run.py --task ingest_raw_data"
